fixed spacing

--- a/client/src/styles/Questions.css
+++ b/client/src/styles/Questions.css
@@ -7,25 +7,28 @@
     list-style: none;
     display: flex;
     flex-direction: column;
-   padding-top:10px;
    font-weight: 500;
+   gap:10px;
+
    
 }
 .ques{
-    padding: 0;
-   padding-bottom: 10px;
+    border-radius: 6px;
 }
-
+.ques:hover{
+    background-color: rgba(240, 248, 255, 0.24);
+}
 .radio:checked+label::before{
     border:2px solid white;
     background-color: rgba(255, 255, 255, 0.8);
-    
 }
+
 label{
     position: relative;
     display: flex;
     align-items: center;
     cursor: pointer;
+    padding:7px;
 }
 
 label::before{
